# python-project-83

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: lint.yml
page_analyzer/: app.py  config.py
page_analyzer/templates/: base.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/include/: messages.html  navigation.html
page_analyzer/templates/urls/: index.html  show.html
