[project]
name = "hexlet-code"
version = "0.1.0"
description = "page-analyzer (project №3 on hexlet)"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "bs4>=0.0.2",
    "flake8>=7.1.1",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "postgres>=4.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.8.6",
    "validators>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
